# t1

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: default.json  jieranduhuo.json  jieranduhuo_v2.json  juebieshu_adaptive_phrase.json  juebieshu_sentence_strict.json  juebieshu_v2.json  tots_v2.json  wuli.json  wuli_adaptive.json
configs/music/: default.json
configs/music_wsl/: default.json  jieranduhuo_v2.json  juebieshu_v2.json  tots_v2.json  wuli_v2.json
configs/music_yby/: default.json  jieranduhuo_v2.json  juebieshu_v2.json  tots_v2.json  wuli_v2.json
configs/prompts/: module_b_prompt.v1已废弃供历史参考.md  module_b_v2.role1_visual_director.md  module_b_v2.role2_big_segment_director.md  module_b_v2.role3_segment_director.md  module_b_v2.role4_prompt_builder.md
configs/storyboard_templates/: storyboard_template.v1.md
docs/: 5分钟跑通指南.md  MVP实现计划.md  ModuleA Whisper 语言配置改造计划.md  Whisper → Fun-ASR-Nano 全量替换计划.md  导师汇报稿_程序思路.md  日语歌词对齐与噪声清洗修复.md  模块D参数手册.md  状态恢复说明.md  防漂移帧锁定及器乐突变卡点.md  项目CLI命令大全.md
docs/A模块升级/: 阶段一.md  阶段二（可选）.md  需求列表.md
docs/B模块升级/: 升级方案.md  音频分镜LLM改进方案.md
docs/cli/: mvpl_交互cli流程.mmd  命令组合与作用速查.md  项目CLI命令大全.md
docs/module_a/: __init__.py.md  backends.py.md  lyrics.py.md  orchestrator.py.md  segmentation.py.md  timing_energy.py.md  模块A_JSON产物输出链路总览.md  模块A_Mermaid总览图.md
docs/module_a_v2/: 模块A_V2_总链.mmd  模块A_V2_核心算法流.mmd
docs/module_b/: 模块B真实链接入说明.md
docs/module_d/: 模块D并行提速报告.md
docs/web/: 需求.md
docs/会话列表/: 优化生图和生视频prompt.md  性能优化与时间监控.md  模块C真实流程.md  模块D真实流程.md  重构cli命令为交互式.md
docs/环境/: 更换云显系统盘需要进行的操作.md
scripts/: _module_a_real_audio_compare.py  _module_a_v2_visualize.py  resume_incomplete_music_yby_20260417.sh  run_music_yby_batch_20260417.sh  run_music_yby_followup_20260417.sh
src/music_video_pipeline/: __init__.py  __main__.py  cli.py  command_service.py  config.py  constants.py  context.py  interactive_cli.py  io_utils.py  log_filters.py  logging_utils.py  pipeline.py  state_store.py  types.py
src/music_video_pipeline/generators/: __init__.py  frame_generator.py  script_generator.py
src/music_video_pipeline/modules/: __init__.py  module_a.py  module_b.py  module_c.py  module_d.py
src/music_video_pipeline/modules/cross_bcd/: __init__.py  models.py  orchestrator.py  scheduler.py
src/music_video_pipeline/modules/module_a/: __init__.py  backends.py  lyrics.py  orchestrator.py  segmentation.py  timing_energy.py
src/music_video_pipeline/modules/module_a_v2/: __init__.py  algorithm.py  artifacts.py  content_roles.py  funasr_lyrics.py  orchestrator.py  perception.py  visualization.py
src/music_video_pipeline/modules/module_a_v2/backends/: __init__.py  allin1.py  demucs.py  librosa.py
src/music_video_pipeline/modules/module_a_v2/energy/: __init__.py  features.py
src/music_video_pipeline/modules/module_a_v2/lyrics/: __init__.py  attachment.py  cleaner.py
src/music_video_pipeline/modules/module_a_v2/timeline/: __init__.py  big_timestamp_resolver.py  role_classifier.py  role_merger.py  window_builder.py
src/music_video_pipeline/modules/module_a_v2/utils/: __init__.py  alias_map.py  media_probe.py  time_utils.py
src/music_video_pipeline/modules/module_b/: executor.py  llm_generator.py  llm_prompt.py
src/music_video_pipeline/modules/module_b_v2/: audio_rules.py  models.py  orchestrator.py  parser.py  prompt_tokens.py  role3_segment_director.py  role4_prompt_builder.py  template_loader.py  token_contracts.py
src/music_video_pipeline/monitoring/: __init__.py  server.py  snapshot.py
src/music_video_pipeline/monitoring/static/: task_monitor.html
src/music_video_pipeline/upload/: staging.py
src/mvp_pipeline/: __init__.py  __main__.py  cli.py  config.py  constants.py  context.py  io_utils.py  logging_utils.py  pipeline.py  state_store.py  types.py
src/mvp_pipeline/generators/: __init__.py  frame_generator.py  script_generator.py
src/mvp_pipeline/modules/: __init__.py  module_a.py  module_b.py  module_c.py  module_d.py
tests/: test_cli_commands.py  test_cli_commands_b.py  test_cli_commands_bcd.py  test_cli_commands_d.py  test_cli_monitor_launch.py  test_command_service.py  test_config.py  test_contracts.py  test_cross_module_bcd_parallel.py  test_diffusers_runtime.py  test_frame_generator.py  test_gpu_probe_script.py  test_interactive_cli.py  test_log_filters.py  test_model_assets_download_flow.py  test_module_a_algorithm.py  test_module_a_backends_raw_dump.py  test_module_a_exports.py  test_module_a_v2_algorithm_path.py  test_module_a_v2_artifacts.py  test_module_a_v2_content_roles.py  test_module_a_v2_contracts.py  test_module_a_v2_energy_features.py  test_module_a_v2_funasr_lyrics.py  test_module_a_v2_librosa_perf_tuning.py  test_module_a_v2_perception_parallel.py  test_module_a_v2_smoke.py  test_module_a_v2_visualization.py  test_module_b_enrichment.py  test_module_b_llm_generator.py  test_module_b_unit_retry_parallel.py  test_module_b_v2_new_contracts.py  test_module_d_animatediff_renderer.py  test_module_d_timing.py  test_monitor_server.py  test_monitor_snapshot.py  test_pipeline_bcd_cli.py  test_pipeline_cross_resume.py  test_pipeline_module_b_cli.py  test_pipeline_module_c_cli.py  (+6 more)
