[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "music-video-pipeline"
version = "0.1.0"
description = "基于音频结构驱动的多模态音画同步流水线"
readme = "docs/5分钟跑通指南.md"
requires-python = ">=3.11, <3.12"
dependencies = [
  "Pillow>=10.0.0",
  "mutagen>=1.47.0",
  "numpy>=1.26.0",
  "librosa>=0.10.2",
  "torch==2.5.0",
  "torchaudio==2.5.0",
  "demucs>=4.0.1",
  "openai-whisper>=20240930",
  "natten", 
  "madmom",
  "all-in-one-fix==2.0.4",
  "setuptools<81",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0"
]

[project.scripts]
music-video-pipeline = "music_video_pipeline.cli:main"
mvpl = "music_video_pipeline.cli:main"

[tool.uv]
override-dependencies = [
  "natten @ https://github.com/SHI-Labs/NATTEN/releases/download/v0.17.5/natten-0.17.5%2Btorch250cu121-cp311-cp311-linux_x86_64.whl"
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
natten = { url = "https://github.com/SHI-Labs/NATTEN/releases/download/v0.17.5/natten-0.17.5%2Btorch250cu121-cp311-cp311-linux_x86_64.whl" }
madmom = { git = "https://github.com/CPJKU//madmom.git", rev = "27f032e" }

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
markers = [
  "smoke: 需要本地可用 ffmpeg 的冒烟测试"
]
