[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "music-video-pipeline"
version = "0.1.0"
description = "基于音频结构驱动的多模态音画同步流水线"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
  "Pillow>=10.0.0",
  "mutagen>=1.47.0",
  "numpy>=1.26.0",
  "opencv-python-headless>=4.10.0",
  "pydantic~=2.0",
  "pydantic-settings~=2.0",
  "huggingface_hub>=0.24.0",
  "requests>=2.31.0",
  "librosa>=0.10.2",
  "websockets>=11.0,<12.0",
  "torch==2.5.0",
  "torchvision==0.20.0",
  "torchaudio==2.5.0",
  "torchsde>=0.2.6",
  "demucs>=4.0.1; sys_platform == 'linux'",
  "funasr; sys_platform == 'linux'",
  "transformers>=4.40.0",
  "kornia>=0.7.1",
  "sentencepiece>=0.2.0",
  "natten; sys_platform == 'linux'",
  "madmom; sys_platform == 'linux'",
  "all-in-one-fix==2.0.4; sys_platform == 'linux'",
  "setuptools<81",
  "bypy>=1.8.9",
  "diffusers",
  "tiktoken>=0.12.0",
  "accelerate==1.13.0",
  "aiohttp>=3.11.8",
  "alembic>=1.14.0",
  "av>=14.2.0",
  "blake3>=1.0.0",
  "comfy-aimdo==0.2.14",
  "comfy-kitchen>=0.2.8",
  "comfyui-embedded-docs==0.4.4",
  "comfyui-frontend-package==1.42.15",
  "comfyui-workflow-templates==0.9.62",
  "filelock>=3.16.0",
  "iniconfig==2.3.0",
  "peft==0.19.1",
  "pip==26.0.1",
  "pluggy==1.6.0",
  "psutil==7.2.2",
  "pytest==9.0.3",
  "PyYAML>=6.0.2",
  "scipy>=1.13.0",
  "simpleeval>=1.0.0",
  "spandrel",
  "SQLAlchemy>=2.0",
  "tqdm>=4.66.0",
  "yarl>=1.18.0",
]

[project.scripts]
music-video-pipeline = "music_video_pipeline.cli:main"
mvpl = "music_video_pipeline.cli:main"
model_assets = "music_video_pipeline.model_assets_cli:main"
eval = "music_video_pipeline.eval_cli:main"

[tool.uv]
override-dependencies = []

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
# 注意：若有同步的本地 whl，仍需在 sources 指定。
# 虽然 Windows 下不安装，但在 lock 或 resolve 阶段如果遇到相对路径，需要文件至少占位存在
natten = { path = ".cache/wheels/natten-0.17.5+torch250cu121-cp311-cp311-linux_x86_64.whl" }
madmom = { git = "https://github.com/CPJKU//madmom.git", rev = "27f032e" }
funasr = { git = "https://github.com/modelscope/FunASR.git", rev = "b842ff8107e1da950947ada0d11ae3c008baeb54" }

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
markers = [
  "smoke: 需要本地可用 ffmpeg 的冒烟测试"
]
